<resources>
    <string name="app_name">WorkLogger</string>
    <string name="settings">Settings</string>
    <string name="title_activity_edit_data">EditData</string>
    <string name="DefaultHoursPerWeek">42.5</string>
    <string name="number_of_hours_per_week">Number of hours per week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save">Save</string>
    <string name="round_button">Round Button</string>
    <string name="hours_left_this_week">Hours left this week</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="one_day_free">One day free</string>
    <string name="over_time">Hours over time</string>
</resources>
