<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <Button
        android:id="@+id/startButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="183dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/start"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editData"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="209dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/displayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_left_this_week"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/hoursLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="90sp" />
    </LinearLayout>

    <Button
        android:id="@+id/SkipOneDay"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/one_day_free"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>